WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
134617
AX: iOS: Crash accessing m_page in WKAccessibilityPageObject
https://bugs.webkit.org/show_bug.cgi?id=134617
Summary
AX: iOS: Crash accessing m_page in WKAccessibilityPageObject
chris fleizach
Reported
2014-07-03 16:20:36 PDT
Looks like the page has gone away, but the WKAXPageObject hangs around just long enough to access an bad delegate Thread 0 name: Dispatch queue: com.apple.main-thread Thread 0 Crashed: 0 WebKit 0x000000018a42de14 WebKit::WebPage::accessibilityScreenToRootView(WebCore::IntPoint const&) + 36 1 WebKit 0x000000018a40a714 -[WKAccessibilityWebPageObject accessibilityHitTest:] + 72 2 WebKit 0x000000018a40a714 -[WKAccessibilityWebPageObject accessibilityHitTest:] + 72
Attachments
patch
(4.07 KB, patch)
2014-07-03 16:24 PDT
,
chris fleizach
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2014-07-03 16:20:57 PDT
<
rdar://problem/17557882
>
chris fleizach
Comment 2
2014-07-03 16:24:24 PDT
Created
attachment 234377
[details]
patch
WebKit Commit Bot
Comment 3
2014-07-31 10:11:47 PDT
Comment on
attachment 234377
[details]
patch Clearing flags on attachment: 234377 Committed
r171860
: <
http://trac.webkit.org/changeset/171860
>
WebKit Commit Bot
Comment 4
2014-07-31 10:11:52 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug