AX: iOS: Crash accessing m_page in WKAccessibilityPageObject https://bugs.webkit.org/show_bug.cgi?id=134617

Reviewed by Darin Adler.

Provide a way to detach a WK2 WebPage object so that it can uninitialize other pointers, like the accessibility object.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::~WebPage):
* WebProcess/WebPage/WebPage.h:
* WebProcess/WebPage/efl/WebPageEfl.cpp:
(WebKit::WebPage::platformDetach):
* WebProcess/WebPage/gtk/WebPageGtk.cpp:
(WebKit::WebPage::platformDetach):
* WebProcess/WebPage/ios/WebPageIOS.mm:
(WebKit::WebPage::platformDetach):
* WebProcess/WebPage/mac/WebPageMac.mm:
(WebKit::WebPage::platformDetach):


Canonical link: https://commits.webkit.org/153338@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@171860 268f45cc-cd09-0410-ab3c-d52691b4dbfc