Source/WebKit2/WebProcess/WebPage/gtk/WebPageGtk.cpp
@@ -66,6 +66,10 @@ void WebPage::platformInitialize()
 #endif
 }
 
+void WebPage::platformDetach()
+{
+}
+
 #if HAVE(ACCESSIBILITY)
 void WebPage::updateAccessibilityTree()
 {
